# ynab-claude-connector

./: .gitignore  .pre-commit-config.yaml  README.md  initial-prompt.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
openspec/changes/archive/2026-06-03-github-scaffolding-cicd/: design.md  proposal.md
openspec/changes/archive/2026-06-03-github-scaffolding-cicd/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-06-03-github-scaffolding-cicd/specs/project-scaffolding/: spec.md
openspec/changes/archive/2026-06-03-mcp-connector-skeleton/: tasks.md
openspec/changes/archive/2026-06-03-mcp-connector-skeleton/specs/connector-runtime/: spec.md
openspec/changes/archive/2026-06-03-ynab-categories-reads/: proposal.md  tasks.md
openspec/changes/archive/2026-06-03-ynab-integration/: proposal.md  tasks.md
openspec/changes/archive/2026-06-03-ynab-integration/specs/ynab-integration/: spec.md
openspec/changes/archive/2026-06-03-ynab-payees-reads/: proposal.md
openspec/changes/archive/2026-06-03-ynab-plans-category/: proposal.md  tasks.md
openspec/changes/archive/2026-06-03-ynab-plans-category/specs/ynab-integration/: spec.md
openspec/changes/archive/2026-06-03-ynab-user-endpoint/: proposal.md  tasks.md
openspec/changes/archive/2026-06-03-ynab-user-endpoint/specs/ynab-integration/: spec.md
openspec/changes/archive/2026-06-04-ynab-money-movements-reads/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-04-ynab-months-reads/: design.md  proposal.md
openspec/changes/archive/2026-06-04-ynab-payee-locations-reads/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-04-ynab-scheduled-transactions-reads/: design.md  proposal.md
openspec/changes/archive/2026-06-04-ynab-transactions-reads/: design.md  proposal.md  tasks.md
openspec/changes/github-scaffolding-cicd/: tasks.md
openspec/changes/mcp-connector-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/ynab-categories-reads/: design.md  tasks.md
openspec/changes/ynab-categories-reads/specs/ynab-integration/: spec.md
openspec/changes/ynab-integration/: design.md  tasks.md
openspec/changes/ynab-money-movements-reads/: tasks.md
openspec/changes/ynab-months-reads/: tasks.md
openspec/changes/ynab-months-reads/specs/ynab-integration/: spec.md
openspec/changes/ynab-payee-locations-reads/: tasks.md
openspec/changes/ynab-payees-reads/: design.md  tasks.md
openspec/changes/ynab-payees-reads/specs/ynab-integration/: spec.md
openspec/changes/ynab-plans-category/: design.md  tasks.md
openspec/changes/ynab-scheduled-transactions-reads/: tasks.md
openspec/changes/ynab-transactions-reads/: tasks.md
openspec/changes/ynab-user-endpoint/: design.md  tasks.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/connector-runtime/: spec.md
openspec/specs/project-scaffolding/: spec.md
openspec/specs/ynab-integration/: spec.md
src/ynab_claude_connector/: __init__.py  __main__.py  config.py  logging_config.py  server.py  tools.py
src/ynab_claude_connector/ynab/: __init__.py  client.py  errors.py  models.py  tools.py
tests/: test_config.py  test_main.py  test_package.py  test_server.py  test_tools.py  test_version.py  test_ynab_client.py  test_ynab_errors.py  test_ynab_models.py  test_ynab_tools.py
(+4 files in other folders)
