[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ynab-claude-connector"
description = "A Claude connector that integrates with YNAB for budget insights."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Calvin Ference" }]
keywords = ["ynab", "claude", "connector", "budget"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
# Version is derived from the Git tag at build time via hatch-vcs (single
# source of truth). There is intentionally no static `version` field here.
dynamic = ["version"]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "build>=1.2",
    "pre-commit>=3.8",
]

[project.scripts]
ynab-claude-connector = "ynab_claude_connector.__main__:main"

[project.urls]
Homepage = "https://github.com/vezril/ynab-claude-connector"
Repository = "https://github.com/vezril/ynab-claude-connector"

# --- Build / versioning -----------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ynab_claude_connector/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ynab_claude_connector"]

# --- Ruff (lint + format) ---------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (enforce type hints)
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may omit return-type annotations on test functions.
"tests/**" = ["ANN201", "ANN001"]

[tool.ruff.format]
quote-style = "double"

# --- mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# Generated by hatch-vcs; not present until built.
module = "ynab_claude_connector._version"
ignore_missing_imports = true

# --- pytest + coverage ------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--cov=ynab_claude_connector",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["ynab_claude_connector"]
omit = [
    # Auto-generated by hatch-vcs at build time; not hand-written code.
    "*/ynab_claude_connector/_version.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
